--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECOnsciente</title>
+    <title>ECONS</title>
     <link rel="stylesheet" href="./assets/style/header.css">
     <link rel="stylesheet" href="./assets/style/mainintro.css">
     <link rel="stylesheet" href="./assets/style/pontos-positivos.css">
     <link rel="stylesheet" href="./assets/style/carrossel.css">
     <link rel="stylesheet" href="./assets/style/apresentacao.css">
+    <link rel="stylesheet" href="./assets/style/sessao-catalogo.css">
     <link rel="stylesheet" href="./assets/style/rodape.css">
+    
 </head>
 
 <body>
@@ -72,6 +74,19 @@
             <button id="intro-btn-03" onclick="mudarFundoPrincipal(3)"></button>
         </div>
     </main>
+
+    <section id="catalogo">
+        <h2 class="center">Veja nosso catálogo completo</h2>
+        <div class="container-catalogo">
+            <a href="./frutas.html" target="_self"><div class="container-catalogo-itens"> </div></a>
+                <div class="container-catalogo-itens">legumes</div>
+                <div class="container-catalogo-itens">verduras</div>
+        </div>
+    </section>
+
+    <h2 class="center">
+        Veja um pouco sobre:
+    </h2>
 
     <section id="carrossel">
 
@@ -287,6 +302,12 @@
 
     </section>
 
+    <!-- ALGO PARA SEPARAR AS SESSÕES --> <hr>
+
+    <h2 class="center">
+        Benefícios que nós proporcionamos
+    </h2>
+
     <section>
 
         <div class="pontos-positivos">
@@ -358,9 +379,6 @@
 
     </section>
 
-    <div>
-        <h2></h2>
-    </div>
 
     <footer class="rodape">
 
