--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <section id="catalogo">
         <h2 class="center">Veja nosso catálogo completo</h2>
         <div class="container-catalogo">
-            <a href="./frutas.html" target="_self"><div class="container-catalogo-itens"> </div></a>
-                <div class="container-catalogo-itens">legumes</div>
+            <a href="./frutas.html" target="_self"><div class="container-catalogo-itens"> FRUTAS </div></a>
+            <a href="./legumes.html" target="_self"><div class="container-catalogo-itens"> LEGUMES</div></a>
                 <div class="container-catalogo-itens">verduras</div>
         </div>
     </section>
