--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     </header>
 
-    <aside id="barraLateral" class="none">
+    <aside id="barraLateral">
         <nav>
             <p>Veja nosso catálogo completo de</p>
             <ol>
@@ -441,6 +441,7 @@
 
 
     <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/exibirMenu.js"></script>
 </body>
 
 </html>
