--- a/verduras.html
+++ b/verduras.html
@@ -76,8 +76,8 @@
                 <div class="row">
                     <div class="col" data-bs-toggle="modal" data-bs-target="#Modal08"></div>
                     <div class="col" data-bs-toggle="modal" data-bs-target="#Modal09"></div>
-                    <div class="col" data-bs-toggle="modal" data-bs-target="#Modal10">Mostarda</div>
-                    <div class="col" data-bs-toggle="modal" data-bs-target="#Modal11">Orégano</div>
+                    <div class="col" data-bs-toggle="modal" data-bs-target="#Modal10"></div>
+                    <div class="col" data-bs-toggle="modal" data-bs-target="#Modal11"></div>
                 </div>
             </div>
 
