[chore] atualização base de dados
- adição campo que faltava dados
- correção de maça para maçã

--- a/frutas.html
+++ b/frutas.html
@@ -234,7 +234,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button class="btn btn-primary" data-bs-target="#Modal08" data-bs-toggle="modal">Leia sobre a maça</button>
+                        <button class="btn btn-primary" data-bs-target="#Modal08" data-bs-toggle="modal">Leia sobre a maçã</button>
                     </div>
                 </div>
             </div>
