[chore] images e links
- adição imagens de benefícios
- adição de links para o perfil do GitHub de alguns membros

--- a/index.html
+++ b/index.html
@@ -322,15 +322,16 @@
 
         <div class="pontos-positivos">
             <div class="box">
-                <div class="box-content"><img src="./assets/money-change-svgrepo-com.svg" width="200px" alt=""
-                        srcset=""></div>
-                <h3>Economia</h3>
-                <p>Ao adotar práticas sustentáveis, as famílias podem economizar em suas compras, aproveitando melhor os
-                    alimentos e reduzindo a necessidade de reposição constante.</p>
+                <div class="box-content">
+                    <img src="./assets/img/index/watermelon-breakfast-svgrepo-com.png" width="200px" alt="" srcset="">
+                </div>
+                <h3>Preservação de Nutrientes e Sabor</h3>
+                <p>Armazenar e conservar os alimentos de forma adequada evita a perda de nutrientes e mantém o sabor
+                    natural dos produtos, promovendo uma alimentação mais nutritiva e saborosa.</p>
             </div>
 
             <div class="box">
-                <div class="box-content"><img src="./assets/health-care-add-svgrepo-com.svg" width="200px" alt=""
+                <div class="box-content"><img src="./assets/img/index/doctor-human-svgrepo-com.png" width="200px" alt=""
                         srcset=""></div>
                 <h3>Diminuição dos Custos de Saúde</h3>
                 <p>Uma dieta rica em frutas e verduras pode reduzir gastos com saúde a longo prazo, já que uma
@@ -339,7 +340,7 @@
 
             <div class="box">
                 <div class="box-content ">
-                    <img src="./assets/fruits-fruit-svgrepo-com.svg" width="200px" alt="" srcset="">
+                    <img src="./assets/img/index/basket-picnic-svgrepo-com.png" width="200px" alt="" srcset="">
                 </div>
                 <h3>Prolongamento da Vida Útil dos Alimentos</h3>
                 <p>Com orientações sobre armazenamento correto, o projeto ajuda as pessoas a manterem frutas, legumes e
@@ -350,20 +351,18 @@
         </div>
 
 
-        <div class="pontos-positivos">
-
+        <div class="pontos-positivos">            
             <div class="box">
-                <div class="box-content">
-                    <img src="./assets/tomato-svgrepo-com.svg" width="200px" alt="" srcset="">
-                </div>
-                <h3>Preservação de Nutrientes e Sabor</h3>
-                <p>Armazenar e conservar os alimentos de forma adequada evita a perda de nutrientes e mantém o sabor
-                    natural dos produtos, promovendo uma alimentação mais nutritiva e saborosa.</p>
+                <div class="box-content"><img src="./assets/img/index/economy-svgrepo-com.png" width="200px" alt=""
+                        srcset=""></div>
+                <h3>Economia</h3>
+                <p>Ao adotar práticas sustentáveis, as famílias podem economizar em suas compras, aproveitando melhor os
+                    alimentos e reduzindo a necessidade de reposição constante.</p>
             </div>
 
             <div class="box">
                 <div class="box-content ">
-                    <img src="./assets/recycling-bin-recycling-svgrepo-com.svg" width="200px" alt="" srcset="">
+                    <img src="./assets/img/index/chart-column-low-svgrepo-com.png" width="200px" alt="" srcset="">
                 </div>
                 <h3>Redução do Impacto Ambiental do Descarte</h3>
                 <p>Orientações sobre o descarte sustentável ajudam a diminuir a quantidade de lixo orgânico enviada para
@@ -373,7 +372,7 @@
 
             <div class="box">
                 <div class="box-content">
-                    <img src="./assets/graphic-graph.svg" width="200px" alt="" srcset="">
+                    <img src="./assets/img/index/enviroment-green-love-planet-save-world-svgrepo-com.png" width="200px" alt="" srcset="">
                 </div>
                 <h3>Diminuição da Emissão de Gases de Efeito Estufa</h3>
                 <p>Com a redução do desperdício de alimentos, há uma diminuição na produção de resíduos orgânicos que,
@@ -417,11 +416,11 @@
         <div>
             <ul>
                 <li class="fonte-bold">AUTORES </li>
-                <li>Israel de Souza </li>
-                <li>Carlos Manoel </li>
+                <li><a href="https://github.com/israelsouza" target="_blank" rel="noopener noreferrer">Israel de Souza</a> </li>
+                <li><a href="https://github.com/Dippshit" target="_blank">Carlos Manoel</a> </li>
                 <li>Matheus Gobbi </li>
                 <li>Raquel Souza </li>
-                <li>Luciano Rodrigues </li>
+                <li><a href="https://github.com/LucianoVitor" target="_blank" rel="noopener noreferrer">Luciano Rodrigues</a> </li>
             </ul>
         </div>
 
