[chore] update links footer

--- a/legumes.html
+++ b/legumes.html
@@ -1192,23 +1192,16 @@
     <footer class="rodape">
 
         <div>
-
-            &reg; Direitos reservados
-        </div>
-
-        <div>
-
-            <div>
+            
+            <div> <!-- IMAGEM INSTA -->
                 <div>
-                    Veja mais sobre
+                    Veja mais sobre 
                 </div>
-
+                
                 <div class="icones-rodape">
-                    <a href="http://www.instagram.com/ec0ns_" target="_blank" rel="noopener noreferrer"><img
-                            src="assets/img/insta.png" alt=""></a>
+                    <a href="http://www.instagram.com/ec0ns_" target="_blank" rel="noopener noreferrer"><img src="assets/img/insta.png" alt=""></a>
 
-                    <a href="https://www.reddit.com/user/Ec0nsciente/" target="_blank"><img src="assets/img/red.png"
-                            alt=""></a>
+                    <a href="https://www.reddit.com/user/Ec0nsciente/" target="_blank"><img src="assets/img/red.png" alt=""></a>
                 </div>
 
             </div>
@@ -1218,11 +1211,11 @@
         <div>
             <ul>
                 <li class="fonte-bold">AUTORES </li>
-                <li>Israel de Souza </li>
-                <li>Carlos Manoel </li>
-                <li>Matheus Gobbi </li>
-                <li>Raquel Souza </li>
-                <li>Luciano Rodrigues </li>
+                <li><a class="semEstiloAncora" href="https://github.com/israelsouza" target="_blank" rel="noopener noreferrer">Israel de Souza</a> </li>
+                <li><a class="semEstiloAncora" href="https://github.com/Dippshit" target="_blank">Carlos Manoel</a> </li>
+                <li><a class="semEstiloAncora" href="https://github.com/TakiG13" target="_blank">Matheus Gobbi</a> </li>
+                <li><a class="semEstiloAncora" href="https://github.com/RaquelSK" target="_blank">Raquel Souza</a> </li>
+                <li><a class="semEstiloAncora" href="https://github.com/LucianoVitor" target="_blank" rel="noopener noreferrer">Luciano Rodrigues</a> </li>
             </ul>
         </div>
 
