--- a/feedback.html
+++ b/feedback.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
 
-    <link rel="stylesheet" href="./assets/style/header.css">
-    <link rel="stylesheet" href="./assets/style/rodape.css">
-    <link rel="stylesheet" href="./assets/style/feedback.css">
 
-    <link href="./scss/_variables.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="./assets/style/header.css">
+    <link rel="stylesheet" href="./assets/style/rodape.css">
+    <link rel="stylesheet" href="./assets/style/feedback.css">
 </head>
 
 <body>
 
-    <header>
+    <main id="cabeçalho">
         <div>
             <a href="./index.html"><img src="./assets/img/ECONSv2.png" alt=""></a>
         </div>
@@ -41,16 +40,22 @@
             </nav>
         </div>
 
-    </header>
+    </main>
 
     <aside id="barraLateral">
         <nav>
             <p>Veja nosso catálogo completo de</p>
             <ol>
-                <a href="./frutas.html" target="_self"><li>Frutas</li></a>
-                <a href="./legumes.html" target="_self"><li>Legumes</li></a>
-                <a href="./verduras.html" target="_self"><li>Verduras</li></a>
-                
+                <a href="./frutas.html" target="_self">
+                    <li>Frutas</li>
+                </a>
+                <a href="./legumes.html" target="_self">
+                    <li>Legumes</li>
+                </a>
+                <a href="./verduras.html" target="_self">
+                    <li>Verduras</li>
+                </a>
+
             </ol>
         </nav>
     </aside>
@@ -62,7 +67,7 @@
         <form>
             <div class="mb-3 px-3">
                 <label class="form-label">Nome completo</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" >
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
 
             <div class="mb-4 px-3">
@@ -135,30 +140,50 @@
     </main>
 
     <footer class="rodape">
-        &reg; Direitos reservados
+
+        <div>
+
+            <div> <!-- IMAGEM INSTA -->
+                <div>
+                    Veja mais sobre
+                </div>
+
+                <div class="icones-rodape">
+                    <a href="http://www.instagram.com/ec0ns_" target="_blank" rel="noopener noreferrer"><img
+                            src="assets/img/insta.png" alt=""></a>
+
+                    <a href="https://www.reddit.com/user/Ec0nsciente/" target="_blank"><img src="assets/img/red.png"
+                            alt=""></a>
+                </div>
+
+            </div>
+        </div>
+
 
         <div>
             <ul>
-                <li class="fonte-bold">AUTORES</li>
-                <li>Israel</li>
-                <li>Carlos</li>
-                <li>Matheus</li>
-                <li>Raquel</li>
-                <li>Luciano</li>
+                <li class="fonte-bold">AUTORES </li>
+                <li><a class="semEstiloAncora" href="https://github.com/israelsouza" target="_blank"
+                        rel="noopener noreferrer">Israel de Souza</a> </li>
+                <li><a class="semEstiloAncora" href="https://github.com/Dippshit" target="_blank">Carlos Manoel</a>
+                </li>
+                <li><a class="semEstiloAncora" href="https://github.com/TakiG13" target="_blank">Matheus Gobbi</a> </li>
+                <li><a class="semEstiloAncora" href="https://github.com/RaquelSK" target="_blank">Raquel Souza</a> </li>
+                <li><a class="semEstiloAncora" href="https://github.com/LucianoVitor" target="_blank"
+                        rel="noopener noreferrer">Luciano Rodrigues</a> </li>
             </ul>
         </div>
 
         <div>
             <ul>
-                <li class="fonte-bold">ARTIGOS</li>
-                <li>01</li>
-                <li>02</li>
-                <li>03</li>
-                <li>04</li>
-                <li>05</li>
+                <li class="fonte-bold">CARGOS</li>
+                <li>Desenvolvedor</li>
+                <li>Designer</li>
+                <li>Pesquisador</li>
+                <li>Pesquisador</li>
+                <li>Pesquisador</li>
             </ul>
         </div>
-
 
 
     </footer>
