--- a/feedback.html
+++ b/feedback.html
@@ -6,19 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
 
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <link rel="stylesheet" href="./assets/style/header.css">
     <link rel="stylesheet" href="./assets/style/rodape.css">
     <link rel="stylesheet" href="./assets/style/feedback.css">
+
+    <link href="./assets/style/bootstrap/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body>
 
-    <main id="cabeçalho">
-        <div>
+    <header class="header">
+        <div class="logo">
             <a href="./index.html"><img src="./assets/img/ECONSv2.png" alt=""></a>
         </div>
 
@@ -28,8 +26,8 @@
                     <li><a href="./index.html">Início</a></li>
                     <li><a href="./artigo.html">Artigos</a></li>
                     <li><a href="./quiz.html">Quiz</a></li>
-                    <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" id="menu-hamb"
+                    <li class="menu-hamb">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" id="menu-hamb"
                             viewBox="0 0 50 50" onclick="mostrarBarraLateral()">
                             <path
                                 d="M 5 8 A 2.0002 2.0002 0 1 0 5 12 L 45 12 A 2.0002 2.0002 0 1 0 45 8 L 5 8 z M 5 23 A 2.0002 2.0002 0 1 0 5 27 L 45 27 A 2.0002 2.0002 0 1 0 45 23 L 5 23 z M 5 38 A 2.0002 2.0002 0 1 0 5 42 L 45 42 A 2.0002 2.0002 0 1 0 45 38 L 5 38 z">
@@ -40,7 +38,7 @@
             </nav>
         </div>
 
-    </main>
+    </header>
 
     <aside id="barraLateral">
         <nav>
