Revert "[chore/style]"
This reverts commit 62078379e26baf9ddfb45b72cd35f65cd1546503.

--- a/quiz.html
+++ b/quiz.html
@@ -12,8 +12,8 @@
 
 <body>
 
-    <header class="header">
-        <div class="logo">
+    <header>
+        <div>
             <a href="./index.html"><img src="./assets/img/ECONSv2.png" alt=""></a>
         </div>
 
@@ -23,8 +23,8 @@
                     <li><a href="./index.html">Início</a></li>
                     <li><a href="./artigo.html">Artigos</a></li>
                     <li><a href="./feedback.html">Feedback</a></li>
-                    <li class="menu-hamb">
-                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" id="menu-hamb"
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" id="menu-hamb"
                             viewBox="0 0 50 50" onclick="mostrarBarraLateral()">
                             <path
                                 d="M 5 8 A 2.0002 2.0002 0 1 0 5 12 L 45 12 A 2.0002 2.0002 0 1 0 45 8 L 5 8 z M 5 23 A 2.0002 2.0002 0 1 0 5 27 L 45 27 A 2.0002 2.0002 0 1 0 45 23 L 5 23 z M 5 38 A 2.0002 2.0002 0 1 0 5 42 L 45 42 A 2.0002 2.0002 0 1 0 45 38 L 5 38 z">
